--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./styless/style.css">
 </head>
 <body>
+    <!-- navbar section -->
     <nav>
         <div class="nav-container">
             <div class="logo">Tech<span id="logo-span">Wave</span></div>
@@ -23,5 +24,24 @@
         </div>
         
     </nav>
+    <!-- banner section  -->
+     <section class="banner">
+        <div class="banner-container">
+            <div class="banner-image">
+                <span class="badge">NEW</span>
+                <img src="./assets/hero-circle.png" alt="" class="img circle">
+                <img src="./assets/microphone.png" alt="" class="img mike">
+            </div>
+            <div class="banner-content">
+                <h3>TechWave</h3>
+                <p class="text">Your daily dose of tech insights, productivity hacks, and personal growt</p>
+                <div class="banner-btn">
+                    <button class="btn"><img src="./assets/spotify.png" alt="">Listen on Spotify</button>
+                        
+                    <button class="subscribe"><img src="./assets/message.png" alt="">Subscribe </button>
+                </div>
+            </div>
+        </div>
+     </section>
 </body>
 </html>
