--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         
     </nav>
     <!-- banner section  -->
-     <section class="banner">
+    <section class="banner">
         <div class="banner-container">
             <div class="banner-image">
                 <span class="badge">NEW</span>
@@ -42,6 +42,40 @@
                 </div>
             </div>
         </div>
-     </section>
+    </section>
+
+    <!-- about section -->
+    <section class="about">
+        <div class="about-container">
+            <div class="about-content">
+                <h2>About the Podcast</h2>
+                <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology. <br>
+                    We break down complex topics into digestible insights, explore productivity strategies that actually work, <br>
+                    and share stories of personal growth from industry leaders. <br><br>
+                    Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
+            </div>
+            <div class="hr-line">
+                <hr>
+            </div>
+            <div class="about-item">
+                <div class="item">
+                    <h4>150K+</h4>
+                    <p>Monthly Listeners</p>
+                </div>
+                <div class="item">
+                    <h4>200+</h4>
+                    <p>Episodes Published</p>
+                </div>
+                <div class="item">
+                    <h4>4.9</h4>
+                    <p>Average Rating</p>
+                </div>
+                <div class="item">
+                    <h4>50+</h4>
+                    <p>Industry Experts</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
