--- a/index.html
+++ b/index.html
@@ -113,5 +113,60 @@
             </div>
         </div>
     </section>
+    <!-- Featured Episodes Section -->
+    <section class="featured">
+        <div class="featured-container">
+            <h2 class="featured-heading">Featured Episodes</h2>
+            <div class="episodes-container">
+                <div class="episodes-cards">
+                    <video  class="video" controls loop src="./assets/17895933-hd_1920_1080_50fps.mp4"></video>
+                    <div class="card-container">
+                        <h4>The Future of AI in Everyday Life</h4>
+                        <p>Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
+                        <p class="card-text"><img src="./assets/clock.png" alt="">42 min</p>
+                    </div>
+                </div>
+                <div class="episodes-cards">
+                    <video class="video" controls loop src="./assets/3433789-hd_1920_1080_25fps.mp4"></video>
+                    <div class="card-container">
+                        <h4>Building Better Habits for Remote Work</h4>
+                        <p>Practical strategies for staying productive and maintaining work-life balance in a remote environment.</p>
+                        <p class="card-text"><img src="./assets/clock.png" alt="">35 min</p>
+                    </div>
+                </div>
+                <div class="episodes-cards">
+                    <video class="video" controls loop src="./assets/17895933-hd_1920_1080_50fps.mp4"></video>
+                    <div class="card-container">
+                        <h4>Career Growth in Tech: A Roadmap</h4>
+                        <p>Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
+                        <p class="card-text"><img src="./assets/clock.png" alt="">51 min</p>
+                    </div>
+                </div>
+            </div>
+            
+
+
+            <div class="meet-container">
+                <h2 class="featured-heading">Meet the Host</h2>
+                <div class="alex-container">
+                    <div class="alex-card">
+                        <img src="./assets/host.png" alt="">
+                    </div>
+                    <div class="alex-card">
+                        <h3>Alex Kumar</h3>
+                        <p>
+                            Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years,    <br>working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and <br>practical advice for anyone looking to grow in tech.
+                        </p>
+                        <div class="alex-logo">
+                            <img src="./assets/linkedin.png" alt="">
+                            <img src="./assets/x.png" alt="">
+                            <img src="./assets/instagram.png" alt="">
+                            <img src="./assets/youtube.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
