added footer section

--- a/index.html
+++ b/index.html
@@ -144,8 +144,6 @@
                 </div>
             </div>
             
-
-
             <div class="meet-container">
                 <h2 class="featured-heading">Meet the Host</h2>
                 <div class="alex-container">
@@ -168,5 +166,30 @@
             </div>
         </div>
     </section>
+    <!-- footer section -->
+    <footer class="footer">
+        <div class="footer-container">
+            <h1>Tech<span class="footer-text">Wave</span></h1>
+            <div class="footer-card">
+                <div class="card-conten">
+                    <img src="./assets/spotify.png" alt="">
+                    <p>Spotify</p>
+                </div>
+                <div class="card-conten">
+                    <img src="./assets/apple-podcast.png" alt="">
+                    <p>Apple Podcasts</p>
+                </div>
+                <div class="card-conten">
+                    <img src="./assets/youtube-podcast.png" alt="">
+                    <p>YouTube</p>
+                </div>
+                <div class="card-conten">
+                    <img src="./assets/twitter.png" alt="">
+                    <p>Twitter</p>
+                </div>
+            </div>
+            <p class="footer-texts">© 2026 TechWave Podcast. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 </html>
