added responsive nav and banner

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <div class="btns">
                 <button class="btn">Subscribe <i class="fa-solid fa-arrow-right"></i> </button>
             </div>
+            <img class="hamburger" src="./assets/hamburger-menu.png" alt="">
         </div>
         
     </nav>
@@ -45,7 +46,7 @@
     </section>
 
     <!-- about section -->
-    <section class="about">
+    <section class="about display-none">
         <div class="about-container">
             <div class="about-content">
                 <h2>About the Podcast</h2>
@@ -78,7 +79,7 @@
         </div>
     </section>
     <!-- choose section -->
-    <section class="choose">
+    <section class="choose display-none">
         <div class="choose-container">
             <h1 class="choose-heading">Why Choose TechWave</h1>
             <div class="choose-item">
@@ -114,7 +115,7 @@
         </div>
     </section>
     <!-- Featured Episodes Section -->
-    <section class="featured">
+    <section class="featured display-none">
         <div class="featured-container">
             <h2 class="featured-heading">Featured Episodes</h2>
             <div class="episodes-container">
@@ -167,7 +168,7 @@
         </div>
     </section>
     <!-- footer section -->
-    <footer class="footer">
+    <footer class="footer display-none">
         <div class="footer-container">
             <h1>Tech<span class="footer-text">Wave</span></h1>
             <div class="footer-card">
