added about choose and featured responsive

--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
             <div class="btns">
                 <button class="btn">Subscribe <i class="fa-solid fa-arrow-right"></i> </button>
             </div>
-            <img class="hamburger" src="./assets/hamburger-menu.png" alt="">
         </div>
-        
+        <img class="hamburger" src="./assets/hamburger-menu.png" alt="">
     </nav>
     <!-- banner section  -->
     <section class="banner">
@@ -46,7 +45,7 @@
     </section>
 
     <!-- about section -->
-    <section class="about display-none">
+    <section class="about">
         <div class="about-container">
             <div class="about-content">
                 <h2>About the Podcast</h2>
@@ -79,7 +78,7 @@
         </div>
     </section>
     <!-- choose section -->
-    <section class="choose display-none">
+    <section class="choose">
         <div class="choose-container">
             <h1 class="choose-heading">Why Choose TechWave</h1>
             <div class="choose-item">
@@ -115,7 +114,7 @@
         </div>
     </section>
     <!-- Featured Episodes Section -->
-    <section class="featured display-none">
+    <section class="featured">
         <div class="featured-container">
             <h2 class="featured-heading">Featured Episodes</h2>
             <div class="episodes-container">
