added some css style

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <button class="btn">Subscribe <i class="fa-solid fa-arrow-right"></i> </button>
             </div>
         </div>
-        <img class="hamburger" src="./assets/hamburger-menu.png" alt="">
+        <img class="display-none" src="./assets/hamburger-menu.png" alt="">
     </nav>
     <!-- banner section  -->
     <section class="banner">
@@ -99,7 +99,7 @@
                     <p>Connect with tech enthusiasts from over 120 countries worldwide.</p>
                 </div>
                 <div class="choose-card cols-layout">
-                    <img src="./assets/headphone.png" alt="">
+                    <img src="./assets/image.png" alt="">
                     <h4>Exclusive Interviews</h4>
                     <p>
                         Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and success strategies.
@@ -167,7 +167,7 @@
         </div>
     </section>
     <!-- footer section -->
-    <footer class="footer display-none">
+    <footer class="footer ">
         <div class="footer-container">
             <h1>Tech<span class="footer-text">Wave</span></h1>
             <div class="footer-card">
