added card video

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <p>Episodes Published</p>
                 </div>
                 <div class="item">
-                    <h4>4.9</h4>
+                    <h4>4.9 <i class="fa-regular fa-star"></i></h4>
                     <p>Average Rating</p>
                 </div>
                 <div class="item">
@@ -119,7 +119,7 @@
             <h2 class="featured-heading">Featured Episodes</h2>
             <div class="episodes-container">
                 <div class="episodes-cards">
-                    <video  class="video" controls loop src="./assets/17895933-hd_1920_1080_50fps.mp4"></video>
+                    <video  class="video" controls loop src="./assets/10935424-hd_1920_1080_30fps.mp4"></video>
                     <div class="card-container">
                         <h4>The Future of AI in Everyday Life</h4>
                         <p>Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
@@ -135,7 +135,7 @@
                     </div>
                 </div>
                 <div class="episodes-cards">
-                    <video class="video" controls loop src="./assets/17895933-hd_1920_1080_50fps.mp4"></video>
+                    <video class="video" controls loop src="./assets/5092425-hd_1920_1080_30fps.mp4"></video>
                     <div class="card-container">
                         <h4>Career Growth in Tech: A Roadmap</h4>
                         <p>Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
